<resources>
    <string name="adherence">Adherence (%)</string>
    <string name="CARAT_T">CARAT TOTAL (%)</string>
    <string name="CARAT_Total">CARAT TOTAL</string>
    <string name="Week">Week: </string>
    <string name="Week_default">Day/Month - Day/Month</string>
    <string name="No_data">No data</string>
    <string name="No_CARAT_data_available">No CARAT answers</string>
    <string name="No_CARAT_data_available_week">No CARAT answers in that week</string>
    <string name="No_symptoms_data_available">No symptoms questionnaires answers</string>
    <string name="Symptoms_Health">Symptoms - Health</string>
    <string name="Symptoms_Leisure">Symptoms - Leisure</string>
    <string name="Symptoms_WS">Symptoms - Work/School</string>
    <string name="data_sent">The following data will be sent:</string>
    <string name="last_CARAT">Latest CARAT</string>
    <string name="CARAT_Q1_short">Stuffy Nose</string>
    <string name="CARAT_Q2_short">Sneezing</string>
    <string name="CARAT_Q3_short">Itchy nose</string>
    <string name="CARAT_Q4_short">Runny Nose</string>
    <string name="CARAT_Q5_short">Dyspnea</string>
    <string name="CARAT_Q6_short">Wheeze</string>
    <string name="CARAT_Q7_short">Physical Effort</string>
    <string name="CARAT_Q8_short">Tiredness</string>
    <string name="CARAT_Q9_short">Waking up</string>
    <string name="CARAT_Q10_short">Medication</string>
    <string name="CARAT_Upper_Airways">CARAT Upper Airways</string>
    <string name="CARAT_Lower_Airways">CARAT Lower Airways</string>
    <string name="never">Never</string>
    <string name="All_days">All days</string>
    <string name="No_med">No</string>
    <string name="more_than_2"> &gt; 2 days</string>
    <string name="equal_orless_2"> &lt; = 2 days</string>
    <string name="equal_ormore_than_7"> &gt; = 7 days</string>
    <string name="less_than_7"> &lt; 7 days</string>
    <string name="Latest_week_summary"> Latest week summary </string>
    <string name="pdf_summary">  Report successfully generated! </string>
    <string name="one_time_posology_are_nedded">You need to define at least 1 schedule and dose.</string>
    <string name="facebook_app_id" translatable="false">1164307896982804</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1164307896982804</string>
    <string name="rest_lang">/en</string>
    <string name="push_lang">en</string>
    <string name="user_lang">en</string>
    <string name="app_name" translatable="false">InspirerMundi</string>
    <string name="no_internet_msg">WHOOPS!!!\n\nIt looks like you\'re out of an internet connection.</string>
    <string name="ok">OK</string>
    <string name="login_text1">Play, encourage, inspire!</string>
    <string name="login_text2">You\'ll have a real role to play in people\'s lives.</string>
    <string name="login_facebook_btn">Continue with Facebook</string>
    <string name="exit_question">Are you sure you want to leave?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="first_time_timeline">Add your medicines\nnow and start\nearning points!</string>
    <string name="first_time_timeline1">Hi!</string>
    <string name="login_error">Login error! Please try again later.</string>
    <string name="level_text">Level %1$d</string>
    <string name="badge_name_1">So It Begins</string>
    <string name="badge_name_2">What\'s Up, Doc?</string>
    <string name="badge_name_3">Perfect Week</string>
    <string name="badge_name_4">Role Model</string>
    <string name="badge_name_5">Big Influencer</string>
    <string name="badge_name_6">On a Roll</string>
    <string name="badge_name_7">Grandparenting</string>
    <string name="badge_name_8">The Big 1K</string>
    <string name="badge_name_9">That\'s a Lot of Points</string>
    <string name="badge_name_10">I Already Lost Count</string>
    <string name="badge_name_11">Millionaire</string>
    <string name="badge_name_12">A Fresh Start</string>
    <string name="badge_name_13">International Inspirer</string>
    <string name="badge_desc_1">Add your first medication</string>
    <string name="badge_desc_2">Your medication was validated by a doctor for the first time</string>
    <string name="badge_desc_3">Take all medication without fail for a full week</string>
    <string name="badge_desc_4">Get your first Warrior</string>
    <string name="badge_desc_5">Get 5 Warriors for the first time</string>
    <string name="badge_desc_6">Reach the maximum streak for the first time</string>
    <string name="badge_desc_7">One of your Warriors gets his/her first Warrior</string>
    <string name="badge_desc_8">Reach 1,000 points</string>
    <string name="badge_desc_9">Reach 10,000 points</string>
    <string name="badge_desc_10">Reach 100,000 points</string>
    <string name="badge_desc_11">Reach 1,000,000 points</string>
    <string name="badge_desc_12">Accept the Super Inspirer challenge on level 50</string>
    <string name="badge_desc_13">Get Warriors from 2 different countries</string>
    <string name="achievement">Achievement</string>
    <string name="close">Close</string>
    <string name="add_medicine">Add medication</string>
    <string name="add_sos">Take extra</string>
    <string name="add_medicine_step1"><![CDATA[Choose the type of medication you have to take, as well as its name.]]></string>
    <string name="add_medicine_step2"><![CDATA[<b>Awesome!!!</b><br /><br />You\'ve picked your medication.<br /><br />Proceed?]]></string>
    <string name="add_medicine_step3"><![CDATA[Define how long your treatment will last and when it starts]]></string>
    <string name="add_medicine_step4"><![CDATA[Define the time(s) of day to take your medication and the respective dosage.]]></string>
    <string name="add_medicine_step5"><![CDATA[Almost there!<br />If you want, write a note you need about the medication you registered.]]></string>
    <string name="whats_the_medicine">1. Which Medication?</string>
    <string name="add_medicine_title">New Medication</string>
    <string name="medicine_type_hint">Medicine type*</string>
    <string name="medicine_name_hint">Medication name*</string>
    <string name="medicine_barcode_hint">Barcode number of the inhaler</string>
    <string name="proceed">Proceed</string>
    <string name="medicine_doses_hint">Remaining doses*</string>
    <string name="fultiform_dialog_text">Tell us how many doses remain in your inhaler.(You can check the number in your inhaler\'s visor).</string>
    <string name="medicine_type_1">Inhaling</string>
    <string name="medicine_type_2">Pill</string>
    <string name="medicine_type_3">Inhaling/nostril</string>
    <string name="medicine_type_4">Others</string>
    <string name="medicine_empty_error">Fill all required fields</string>
    <string name="change_medicine">Change Medication</string>
    <string name="share_with_doctor">Shareable with your doctor</string>
    <string name="medicine_time">3. Time</string>
    <string name="medicine_total_days_hint">Treatment duration* (days)</string>
    <string name="medicine_start_date_hint">When does it start?*</string>
    <string name="medicine_day_times">4. Daily schedule</string>
    <string name="add_more_times">|+| add another schedule</string>
    <string name="medicine_day_fase_hint">Time of day*</string>
    <string name="medicine_posology_hint">Dosage*</string>
    <string name="one_time_is_needed">You need to define at least 1 schedule.</string>
    <string name="medicine_notes">5. Notes</string>
    <string name="end">Finish</string>
    <string name="medicine_notes_hint">Note</string>
    <string name="add_new_medicine">|+| add another Medication</string>
    <string name="error_create_medicine">We encountered a problem creating the medication. Please try again later.</string>
    <string name="ok_create_medicine">Created successfully</string>
    <string name="medicine_sos_when">3. When?</string>
    <string name="sos_date_hint">Day*</string>
    <string name="sos_time_hint">Hour*</string>
    <string name="add_sos_medicine_step3">Record when you took the emergency medication and its dosage.</string>
    <string name="medicine_sos_episode_type">4. type of episode/attack</string>
    <string name="severity">Severity*</string>
    <string name="mild">light</string>
    <string name="severe">severe</string>
    <string name="sos_trigger_hint">Trigger</string>
    <string name="sos_obs_hint">Observations</string>
    <string name="sos_need_doctor_hint">Necessity to go to health services?*</string>
    <string name="health_code_1">No</string>
    <string name="health_code_2">Doctor</string>
    <string name="health_code_3">Urgency</string>
    <string name="health_code_4">Internment</string>
    <string name="see_all">See all</string>
    <string name="medication_programed">programmed\nmedications</string>
    <string name="points_won">earned\npoints</string>
    <string name="week_dates">Week from %1$s to %2$s</string>
    <string name="total_ok_meds">taken correctly (%1$s)</string>
    <string name="total_late_meds">taken late (%1$s)</string>
    <string name="total_failed_meds">failed (%1$s)</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="yesterday">Yesterday</string>
    <string name="medicine_late_msg">Taken late</string>
    <string name="emergency">Emergency</string>
    <string name="at_time">at %1$s</string>
    <string name="failed_medicine_text">Failed Medication</string>
    <string name="take_late_medicine">Take Late Medication</string>
    <string name="time_interval">%1$s - %2$s</string>
    <string name="problem_takin_med">Problem registering information.</string>
    <string name="medicine_days_error">The number cannot exceed 1 year.</string>
    <string name="medication_notes">Medication notes</string>
    <string name="take_notes">Take notes</string>
    <string name="no_note">No notes</string>
    <string name="add_note">Add note</string>
    <string name="add_note_message">Add note</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="error_adding_note">We encountered a problem saving the note. Please try again later.</string>
    <string name="stats_beginning_text1">Your therapeutic\nadhesion.</string>
    <string name="stats_beginning_text2">since the start.</string>
    <string name="stats_month_text1">Your therapeutic\nadhesion in the</string>
    <string name="stats_month_text2">last 30 days.</string>
    <string name="stats_7_days_text2">last 7 days.</string>
    <string name="stats_started_in">started at %1$s</string>
    <string name="load_map_info_error">We encountered a problem loading the information. Please try again later.</string>
    <string name="your_empire">My Empire</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="my_empire">%1$s Warriors\nin %2$s countries</string>
    <string name="my_empire_initial">0 Warriors\nin 0 countries</string>
    <string name="error_getting_info">We encountered a problem loading the information. Please try again later.</string>
    <string name="your_position_text">Your rank\nin the network is:</string>
    <string name="points">points -</string>
    <string name="default_country_name">Portugal</string>
    <string name="user_profile">User Profile</string>
    <string name="my_profile">Your profile</string>
    <string name="average_ever_percent">Accomplishing</string>
    <string name="my_average_ever_percent">Accomplishing</string>
    <string name="messages">Messages</string>
    <string name="my_social">My network</string>
    <string name="interests">Hobbies</string>
    <string name="view_more_no_underline">View more</string>
    <string name="hobbies_hint">ADD MORE HOBBIES</string>
    <string name="save">Save</string>
    <string name="select_hint">Select</string>
    <string name="hobbies_none">No hobbies selected</string>
</resources>