
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bloomidea.inspirers.AddSOSMedicineStep4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:focusableInTouchMode="true"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:srcCompat="@drawable/icon_add_sos_step4" />

            <com.bloomidea.inspirers.customViews.MorebiRoundedTextView
                android:id="@+id/textView7"
                android:textStyle="bold"
                android:typeface="normal"
                android:layout_marginLeft="@dimen/activity_horizontal_margin_div_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:ellipsize="end"
                android:textAllCaps="true"
                android:textColor="@color/text_color_333333"
                android:textSize="@dimen/morebiRounded_12pt"
                android:text="@string/medicine_sos_episode_type" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.bloomidea.inspirers.customViews.MorebiRoundedTextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin_div_2"
                android:text="@string/sos_trigger_hint"
                android:textColor="@color/text_color_666666"
                android:textSize="@dimen/morebiRounded_8pt"
                android:typeface="normal" />
            <com.bloomidea.inspirers.customViews.MorebiRoundedEditText
                android:background="@drawable/spinner_back"
                android:id="@+id/sos_trigger_editText"
                android:layout_marginTop="@dimen/activity_horizontal_margin_div_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color_333333"
                android:textColorHint="@color/text_color_999999"
                android:layout_weight="1"
                android:maxLines="1"
                android:textSize="@dimen/morebiRounded_8pt"
                android:typeface="normal"
                android:ems="10"
                android:inputType="text"
                android:imeOptions="flagNavigateNext"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.bloomidea.inspirers.customViews.MorebiRoundedTextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin_div_2"
                android:text="@string/severity"
                android:textColor="@color/text_color_666666"
                android:textSize="@dimen/morebiRounded_8pt"
                android:typeface="normal" />

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin_div_2"
                android:progressDrawable="@drawable/custom_seek_bar"
                android:thumb="@drawable/custom_seek_thumb_trans"
                android:max="100"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.bloomidea.inspirers.customViews.MorebiRoundedTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mild"
                    android:textColor="@color/text_color_666666"
                    android:textSize="@dimen/morebiRounded_8pt"
                    android:typeface="normal" />
                <com.bloomidea.inspirers.customViews.MorebiRoundedTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/severe"
                    android:textColor="@color/text_color_666666"
                    android:textSize="@dimen/morebiRounded_8pt"
                    android:typeface="normal" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.bloomidea.inspirers.customViews.MorebiRoundedTextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin_div_2"
                android:text="@string/sos_need_doctor_hint"
                android:textColor="@color/text_color_666666"
                android:textSize="@dimen/morebiRounded_8pt"
                android:typeface="normal" />
            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/sos_need_doctor_box"
                android:layout_marginTop="@dimen/activity_horizontal_margin_div_2"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_back">

                <com.bloomidea.inspirers.customViews.MorebiRoundedTextView
                    android:id="@+id/sos_need_doctor_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="2dp"
                    android:maxLines="1"
                    android:layout_weight="1"
                    android:typeface="normal"
                    android:hint="@string/select_hint"
                    android:textColor="@color/text_color_333333"
                    android:textColorHint="@color/text_color_999999"
                    android:textSize="@dimen/morebiRounded_8pt"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical" />

                <ImageView
                    android:id="@+id/teste3"
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/arrow_spinner" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.bloomidea.inspirers.customViews.MorebiRoundedTextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin_div_2"
                android:text="@string/sos_obs_hint"
                android:textColor="@color/text_color_666666"
                android:textSize="@dimen/morebiRounded_8pt"
                android:typeface="normal" />

            <com.bloomidea.inspirers.customViews.MorebiRoundedEditText
                android:background="@drawable/spinner_back"
                android:id="@+id/sos_obs_editText"
                android:layout_marginTop="@dimen/activity_horizontal_margin_div_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color_333333"
                android:textColorHint="@color/text_color_999999"
                android:layout_weight="1"
                android:lines="3"
                android:gravity="top"
                android:textSize="@dimen/morebiRounded_8pt"
                android:typeface="normal"
                android:imeOptions="actionDone"
                android:ems="10"
                android:inputType="textMultiLine"
                android:text="" />
        </LinearLayout>
        <com.bloomidea.inspirers.customViews.MorebiRoundedSwitch
            android:id="@+id/sos_share_doctor_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin_div_2"
            android:checked="true"
            android:text="@string/share_with_doctor"
            android:textColor="@color/text_color_333333"
            android:textSize="@dimen/morebiRounded_8pt" />

        <com.bloomidea.inspirers.customViews.MorebiRoundedTextView
            android:id="@+id/end_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin_div_2"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_horizontal_margin_div_2"
            android:paddingBottom="@dimen/activity_horizontal_margin_div_2"
            android:maxLines="1"
            android:layout_weight="1"
            android:typeface="normal"
            android:textColor="#ffffff"
            android:textColorHint="@color/text_color_999999"
            android:textSize="@dimen/morebiRounded_10pt"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:textAllCaps="true"
            android:text="@string/end"/>

    </LinearLayout>

</ScrollView>