<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bloomidea.inspirers.AddMedicineStep4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:focusableInTouchMode="true"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:srcCompat="@drawable/icon_step4" />
            <com.bloomidea.inspirers.customViews.MorebiRoundedTextView
                android:id="@+id/textView7"
                android:textStyle="bold"
                android:typeface="normal"
                android:layout_marginLeft="@dimen/activity_horizontal_margin_div_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:ellipsize="end"
                android:textAllCaps="true"
                android:textColor="@color/text_color_333333"
                android:textSize="@dimen/morebiRounded_12pt"
                android:text="@string/medicine_day_times" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/times_list">
            <LinearLayout
                android:layout_marginTop="@dimen/activity_horizontal_margin_div_2"
                android:id="@+id/toplegend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible">
                <com.bloomidea.inspirers.customViews.MorebiRoundedTextView
                    android:id="@+id/textView1"
                    android:layout_weight="1"
                    android:layout_marginRight="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/medicine_day_fase_hint"
                    android:textColor="@color/text_color_666666"
                    android:textSize="@dimen/morebiRounded_8pt"
                    android:typeface="normal" />
                <com.bloomidea.inspirers.customViews.MorebiRoundedTextView
                    android:id="@+id/textView2"
                    android:layout_weight="1"
                    android:layout_marginLeft="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/medicine_posology_hint"
                    android:textColor="@color/text_color_666666"
                    android:textSize="@dimen/morebiRounded_8pt"
                    android:typeface="normal" />
                <ImageView
                    android:id="@+id/aux_delete_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:src="@drawable/delete_medicine"
                    android:visibility="gone"/>
            </LinearLayout>



        </LinearLayout>

        <com.bloomidea.inspirers.customViews.MorebiRoundedTextView
            android:id="@+id/add_more_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin_div_2"
            android:paddingBottom="@dimen/activity_horizontal_margin_div_2"
            android:maxLines="1"
            android:layout_weight="1"
            android:typeface="normal"
            android:textColor="#ffffff"
            android:textColorHint="@color/text_color_999999"
            android:textSize="@dimen/morebiRounded_10pt"
            android:background="#9966ff"
            android:gravity="center"
            android:textAllCaps="true"
            android:text="@string/add_more_times"/>

        <com.bloomidea.inspirers.customViews.MorebiRoundedTextView
            android:id="@+id/proceed_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin_div_2"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_horizontal_margin_div_2"
            android:paddingBottom="@dimen/activity_horizontal_margin_div_2"
            android:maxLines="1"
            android:layout_weight="1"
            android:typeface="normal"
            android:textColor="#ffffff"
            android:textColorHint="@color/text_color_999999"
            android:textSize="@dimen/morebiRounded_10pt"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:textAllCaps="true"
            android:text="@string/proceed"/>

    </LinearLayout>

</ScrollView>